--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -106,7 +106,7 @@ Type your answer to everyone in the chat.
 
 - Video on
 - Mic off
-- Questions in the chat (moderated by TA)
+- Questions in the chat (moderated by another instructor)
 - **Checkpoints**
 - **Pausing for Questions**
 
@@ -138,23 +138,12 @@ class: subtitle
 - Questions in the chat (moderated by TA)
 - Checkpoints
 - Pausing for Questions
-- [**The Whiteboard**]({{site.data.links.whiteboard}})
 
 ???
 * We love to hear and honor a variety of questions.  
 * Sometimes a question will be answered later in the course.
 * Sometimes a question will require a longer conversation that may better be answered later in the course.
 * In these cases, we will log these on a whiteboard.  Normally this is a physical whiteboard...
-
----
-
-<img src="/ui/img{{page.id}}/whiteboard-example.png" width = 100%>
-
-???
-* But, we are working remotely :-)
-* So we will keep track of these in a Google Doc like this one.
-* Based on timing, we will revisit the whiteboard after lunch and at the end of each day.
-* The link is in the SLACK channel if you want to add to this on your own.
 
 ---
 
