--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -12,7 +12,7 @@ class: title, center, middle
 
 - [Intros!]({{site.data.links.intros}})
 - Where are you calling from? (city + room)
-- What does your day-to-day work look like?
+- What is one thing you'd like to get from this training?
 
 ---
 # The traditional data team
