Change TA to instructor in distributed-norms.html

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -135,7 +135,7 @@ class: subtitle
 
 - Video on
 - Mic off
-- Questions in the chat (moderated by TA)
+- Questions in the chat (moderated by another instructor)
 - Checkpoints
 - Pausing for Questions
 
