implementing Fed and Mar 2021 tweaks

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -12,15 +12,6 @@ class: title, center, middle
 
 ---
 
-# Setting the Stage
-
-- We have all been working remotely for some time.
-- Different organizations use different video conference tools.
-- Different organizations have different norms.
-- We will set some norms today so that everyone gets the most out of this practice.
-
----
-
 # dbt Learn norms
 
 .center[
@@ -49,49 +40,27 @@ During these two days, we want to introduce some norms so we can get the most ou
 
 ---
 
-# Agenda
+# Agenda and Resources
 
-The lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
-
-We have organized the timing for our two days in a separate [agenda]({{ site.data.links.agenda }})
-
+- **Agenda:** We have organized the timing for our training in a separate [agenda]({{ site.data.links.agenda }})
+- **Lessons:** All lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
 ---
 
-# Scope of Learning
-
-1. Software Engineering Principles
-2. Hard analytics skills
-3. Ecosystem Context
-
-???
-As we are working together, it might be helpful to think about your learning in these three buckets:
-* dbt empowers analysts to use SE principles.  We will cover the principles so we know the theory behind their implementation.
-* We will also learn concrete skills for building a dbt project of your own.
-* Finally, our work operates in the modern data ecosystem.  We will all be stronger team members at our orgs if we understand this ecosystem.
-
----
 
 class: subtitle, center, middle
 
 # Two Methods of Learning
 
-Content Presentations & Working Sessions
-
+Content Based & Practice Based
 
 ---
 
-# Content Presentations
+# Content-based
 
 - **Video on**
 - **Mic off**
-- **Questions in the chat (moderated by another instructor)**
-
-???
-* As you may do in your own meetings, during content presentations, we will norm on videos on, mic off.
-* Also, to preserve the flow of the content delivery, we would like to keep questions in that chat than pausing to ask them.
-* Another teacher will moderate the chat and escalate questions if they make sense in the moment as opposed to at the end of a section.
-
-
+- **Questions in the Slack chat, not Zoom chat (moderated by another instructor)**
+- **Emoji Reactions** 
 ---
 
 class: subtitle
@@ -102,11 +71,12 @@ Type your answer to everyone in the chat.
 
 ---
 
-# Content Presentations
+# Content-based
 
 - Video on
 - Mic off
-- Questions in the chat (moderated by another instructor)
+- Questions in the Slack chat, not Zoom chat (moderated by another instructor)
+- Emoji Reactions
 - **Checkpoints**
 - **Pausing for Questions**
 
@@ -117,7 +87,7 @@ class: subtitle
 
 # Checkpoint:
 
-- How might learning about the modern data ecosystem make you a stronger team member?
+- _Sample question for checking understanding_
 
 --
 
@@ -131,23 +101,7 @@ class: subtitle
 
 ---
 
-# Content Presentations
-
-- Video on
-- Mic off
-- Questions in the chat (moderated by another instructor)
-- Checkpoints
-- Pausing for Questions
-
-???
-* We love to hear and honor a variety of questions.  
-* Sometimes a question will be answered later in the course.
-* Sometimes a question will require a longer conversation that may better be answered later in the course.
-* In these cases, we will log these on a whiteboard.  Normally this is a physical whiteboard...
-
----
-
-# Working Sessions
+# Practice-based
 
 - Video on
 - Mic on
@@ -156,7 +110,7 @@ class: subtitle
 - Share the floor - step up, step back
 
 ???
-* The other method of learning will be working sessions!
+* The other method of learning will be Practice-based!
 * These will be chances to work in small groups with the support of a teacher.
 * We will use Zoom's breakout rooms to manage these.
 
@@ -173,24 +127,6 @@ class: subtitle
 
 ---
 
-
-class: subtitle
-
-# Community Builder
-
-In your breakout room...
-1. Find out who has a birthday closest to today (You will screen share the whiteboard doc with the questions)
-2. The whiteboard has three questions.
-3. Each person chooses a question to answer and take turns sharing out.
-4. If you finish early, start brainstorming some curious questions about dbt for the Whiteboard.
-5. Note: When you see the countdown pop up in the breakout room, let the timer run out before returning.
-
-???
-* (Send link to Google doc in the Slack Channel)
-* We will do a quick icebreaker with breakout rooms to get to know each other a little better
-* (Call on someone) could you read the slide for us
-
----
 
 class: title, center, middle
 
