--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -17,17 +17,18 @@ class: title, center, middle
 
 ---
 
+class: subtitle, middle, center
+## _How is knowledge documented and maintained at your company?_
+
+---
+
+
 # Why is documentation important?
 
-_Low quality research manifests as an environment of knowledge cacophony,
-where teams only read and trust research that they themselves created._
-- Chetan Sharma and Jan Overgoor, [Scaling Knowledge at Airbnb](
-https://medium.com/airbnb-engineering/scaling-knowledge-at-airbnb-875d73eff091)
-
-&nbsp;
-
-_If you don't know, now you know._
-- Notorious B.I.G., "Juicy"
+- Empowers the writer to refer back to their thinking
+- Empowers the reader to find their own answers
+- Increases velocity of onboarding
+- Reduces for ad hoc, repeated communication
 
 ---
 
