--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -101,6 +101,25 @@ Note: This lesson presents the opportunity to make the learners the expert:
 If this goes well, we can think about other ways to make other decks more interactive.
 
 ---
+# Dictionaries and Lists
+
+.left-column[
+### Dictionaries
+
+- delimited by { }
+- accessed using 'keys'
+- e.g. my_dictionary['name']
+]
+
+.right-column[
+### Lists
+- delimited by [  ]
+- accessed using numbers
+- e.g. my_list[0] 
+
+]
+
+---
 # Dictionaries
 
 ```jinja
@@ -122,7 +141,7 @@ me
 
 
 ---
-# Arrays
+# Lists
 
 ```jinja
 {% set self = ['me', 'myself'] %}
