--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -47,7 +47,7 @@ packages:
 
 ```
 
-.caption[Always check [hub.getdbt.com](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/)] for latest
+.caption[Always check [hub.getdbt.com](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) for latest version]
 
 Note: you can also install a package from a git URL, or from a local directory.
 
