--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -170,6 +170,9 @@ PR templates help you write better PRs (and are great tools for reviewers!)
 .caption[
   [Example PR template](https://github.com/fishtown-analytics/dbt-init/blob/master/starter-project/.github/pull_request_template.md)
 ]
+.caption[
+  [Guide for adding a PR template in GitHub](https://docs.github.com/en/communities/using-templates-to-encourage-useful-issues-and-pull-requests/creating-a-pull-request-template-for-your-repository)
+]
 ---
 class: subtitle, center, middle
 # 🧘‍♀️ [Much better!](https://github.com/fishtown-analytics/dbt-learn-demo-v2/pull/6)
