fix sources bug

--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -314,7 +314,7 @@ sources:
 
 ```sql
 select *
-from {{ source('payment_data', 'events') }}
+from {{ source('event_data', 'events') }}
 ```
 ]
 {% endraw %}
